fix(styles): Wrap button mixin properties in parent selectors for improved scoping

--- a/packages/frontend/@n8n/design-system/src/css/mixins/_button.scss
+++ b/packages/frontend/@n8n/design-system/src/css/mixins/_button.scss
@@ -37,9 +37,11 @@
 }
 
 @mixin button-variant($color, $background-color, $border-color, $h, $s, $l, $t, $plain: true) {
-	color: $color;
-	background-color: hsl(var(#{$h}), var(#{$s}), var(#{$l}));
-	border-color: hsl(var(#{$h}), var(#{$s}), var(#{$l}));
+	& {
+		color: $color;
+		background-color: hsl(var(#{$h}), var(#{$s}), var(#{$l}));
+		border-color: hsl(var(#{$h}), var(#{$s}), var(#{$l}));
+	}
 
 	&:active {
 		background: function.lightness($h, $s, $l, -(var.$button-active-shade-percent));
